<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- First Name -->
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/first_name"
            android:inputType="text" />

        <!-- Last Name -->
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/last_name"
            android:inputType="text" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <!-- Password -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>
