<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121111"
    android:backgroundTint="#121010">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Phone number input -->
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_phone_number_e_g_1234567890"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#E7E3E3" />

        <!-- Button to send OTP -->

        <!-- OTP input -->

        <Button
            android:id="@+id/btnSendOtp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send_otp"
            app:icon="@android:drawable/ic_menu_call"
            app:iconTint="#0F0E0E"
            app:rippleColor="#F6F0F0"
            app:strokeColor="#E1FAF7F7" />

        <EditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="otp from your sms idiot"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FBF9F9" />

        <!-- Button to verify OTP -->
        <Button
            android:id="@+id/btnVerifyOtp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp" />

        <!-- Divider or text separator -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/or"
            android:textAlignment="center" />

        <!-- Button for Google Sign-In -->
        <Button
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            app:icon="@drawable/googleg_standard_color_18" />
    </LinearLayout>
</ScrollView>
